Fixed overlay scrolling on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -221,6 +221,7 @@ input::placeholder {
     background-color: var(--secondary);
     opacity: 0.5;
     z-index: -2;
+    top: 0;
 }
 
 .btn {
